# cade

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
.tack/: default.nix  pins.lock.json  pins.toml
nix/: direnv-compat.bash  direnv-compat.nix  direnv-compat.nu  module.nix  package.nix  snippets.nix
src/: cade_file.rs  command.rs  config.rs  core.rs  direnv_export.rs  env.rs  env_delta.rs  envrc.rs  envs.rs  expand.rs  loaders.rs  main.rs  nix_dev_env.rs  nix_progress.rs  path_resolve.rs  progress.rs  shells.rs  types.rs  verbosity.rs
src/cade_file/: parse.rs
src/cli/: clap.rs  mod.rs  parse.rs  pound.rs
src/core/: activation.rs  cache.rs  enter.rs  layer.rs  lifecycle.rs  participants.rs  permissions.rs  reload.rs  restore.rs  rollup.rs  sessions.rs  shell_state.rs  snapshot.rs  status.rs  watch.rs
src/core/sessions/: gc_roots.rs  identity.rs  leases.rs
src/env/: delta.rs  mod.rs  parse.rs  rollup.rs  set.rs  store_paths.rs
src/envrc/: directive.rs  load.rs  mod.rs  plan.rs  watch.rs
src/expand/: eval.rs  mod.rs  quote.rs  walk.rs
src/loaders/: call.rs  env_file.rs  mod.rs
src/nix/: capture.rs  develop.rs  filter.rs  mod.rs  profile.rs  progress.rs  target.rs
src/shells/: elvish.rs  fish.rs  json.rs  mod.rs  murex.rs  nushell.rs  posix.rs  quote.rs
src/types/: hook.rs  keyword.rs  layer.rs  load_spec.rs  mod.rs
tests/: direnv_shim.rs  export_json.rs  integration.rs
tests/common/: mod.rs
