[package]
name = "cade"
version = "0.1.2"
edition = "2024"
license = "EUPL-1.2"
description = "an intelligent, cascading environment manager"
repository = "https://github.com/manic-systems/cade"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
# lto = true
# panic = "abort"

[dependencies]
anyhow = "1.0.99"
cognos = "1.0"
libc = "0.2"
microxdg = "0.2.0"
pound = "0.1.4"
rusqlite = "0.37.0"
serde = { version = "1.0.226", features = ["derive"] }
shlex = "1.3.0"
serde_json = "1.0.145"
toml = "0.8"
whoami = { version = "1.6.1", default-features = false }
